Fix header title too big on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -47,9 +47,25 @@ p {
   }
 
   &.welcome-message {
+    font-size: 45px;
+    line-height: 45px;
+
+    @media only screen and (min-width: 768px) {
+      font-size: 55px;
+      line-height: 55px;
+    }
+
+    @media only screen and (min-width: 992px) {
+      font-size: 63px;
+      line-height: 63px;
+    }
+
+    @media only screen and (min-width: 1200px) {
+      font-size: 83px;
+      line-height: 83px;
+    }
+
     color: white;
-    font-size: 83px;
-    line-height: 83px;
     font-weight: 500;
     font-family: Montserrat;
     letter-spacing: 0px;
